# jubatus-rust-client

./: .gitignore  Cargo.toml  README.md  generate.sh  rustfmt.toml
examples/: anomaly.rs  rec_analyze.rs  shogun.rs
src/: lib.rs
src/anomaly/: client.rs  mod.rs  types.rs
src/bandit/: client.rs  mod.rs  types.rs
src/burst/: client.rs  mod.rs  types.rs
src/classifier/: client.rs  mod.rs  types.rs
src/clustering/: client.rs  mod.rs  types.rs
src/common/: client.rs  datum.rs  mod.rs
src/graph/: client.rs  mod.rs  types.rs
src/nearest_neighbor/: client.rs  mod.rs  types.rs
src/recommender/: client.rs  mod.rs  types.rs
src/regression/: client.rs  mod.rs  types.rs
src/stat/: client.rs  mod.rs  types.rs
src/weight/: client.rs  mod.rs  types.rs
