[package]
authors = ["hhatto <hhatto.jp@gmail.com>"]
description = "jubatus client"
documentation = "http://hhatto.github.io/jubatus-rust-client/jubatus/"
keywords = ["jubatus"]
license = "MIT"
name = "jubatus"
repository = "https://github.com/hhatto/jubatus-rust-client"
version = "0.1.0"

[dependencies]
rmp = "^0.7"
rmp-serialize = "0.7"

[dev-dependencies]
rand = "0.3"

[dependencies.msgpack-rpc]
git = "https://github.com/euclio/msgpack-rpc-rust.git"
optional = false
